<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:theme="@style/Theme.AppCompat"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="144dp"
        android:layout_height="145dp"
        android:contentDescription="@string/registerlogo"
        app:srcCompat="@android:drawable/presence_online" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/emailEx"
        android:autofillHints="@string/emailEx"
        android:inputType="textEmailAddress"
        android:paddingBottom="25dp" />


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pass"
        android:autofillHints="@string/pass"
        android:inputType="textPassword"
        android:paddingBottom="25dp" />


    <Button
        android:id="@+id/btRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="40dp"
        android:text="@string/already_have_an_account_login" />

</LinearLayout>