<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical"
    tools:context=".AddHappyActivity">

    <EditText
        android:id="@+id/tvArrayAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/contentex"
        android:hint="@string/Content"
        android:inputType="text"
        android:paddingBottom="20dp" />

    <Button
        android:id="@+id/btAddTo"
        android:layout_width="117dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="490sp"
        android:background="@color/colorAccent"
        android:text="@string/addTo" />


</LinearLayout>